feat: PWA redesign with P2P live sharing, 20 themes, and full UX overhaul
Major PWA update (Rounds 1-12):

- P2P live sharing: Quick Connect (room codes + HTTP signaling via ntfy.sh/CF Worker)
  and Private Connect (manual SDP exchange, zero servers). End-to-end encrypted
  (AES-256-GCM + PBKDF2), optional passwords, QR code sharing.
- 20 themes: 10 palettes (Clinical, Soft, Warm, Ocean, Forest, Sunset, Lavender,
  Midnight, Sky, Blush) x light/dark modes with CSS custom property design tokens.
- Hamburger menu with settings, themes, session management, sharing, and about.
- Hospital advisor page: 4-section layout with departure advice, 5-1-1 progress,
  water break tracking, and clinical reference.
- Onboarding flow, contextual tips, empty states, session archiving.
- Design token system for consistent spacing, typography, and radii across all pages.
- Pause + delete bug fix: overlay no longer gets stuck when last contraction is deleted.
- Playwright visual smoke tests (14 tests across pages and themes).
- CF Worker signaling server and self-hosted Docker signaling server configs.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ web/dist/
 web/node_modules/
 web/.astro/
 
+# Playwright test artifacts
+web/test-results/
+web/playwright-report/
+
 # Claude Code infrastructure (not for public repo)
 .claude/
 knowledge-base/
