--- a/web/package.json
+++ b/web/package.json
@@ -5,19 +5,27 @@
 	"scripts": {
 		"dev": "astro dev",
 		"build": "astro build",
-		"preview": "astro preview"
+		"preview": "astro preview",
+		"test": "playwright test",
+		"test:screenshots": "playwright test tests/visual-smoke.spec.ts"
 	},
 	"dependencies": {
-		"astro": "^5.7.0",
 		"@astrojs/svelte": "^7.0.0",
-		"svelte": "^5.0.0",
 		"@astrojs/tailwind": "^6.0.0",
-		"tailwindcss": "^3.4.0",
 		"@vite-pwa/astro": "^0.5.0",
-		"swiper": "^11.0.0"
+		"astro": "^5.7.0",
+		"lucide-svelte": "^0.563.0",
+		"qrcode": "^1.5.4",
+		"svelte": "^5.0.0",
+		"swiper": "^11.0.0",
+		"tailwindcss": "^3.4.0",
+		"y-webrtc": "^10.3.0",
+		"yjs": "^13.6.29"
 	},
 	"devDependencies": {
-		"typescript": "^5.3.0",
-		"@types/node": "^20.10.0"
+		"@playwright/test": "^1.58.2",
+		"@types/node": "^20.10.0",
+		"@types/qrcode": "^1.5.6",
+		"typescript": "^5.3.0"
 	}
 }
