--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/tailwind": "^6.0.0",
 		"@vite-pwa/astro": "^0.5.0",
 		"astro": "^5.7.0",
+		"jsqr": "^1.4.0",
 		"lucide-svelte": "^0.563.0",
 		"qrcode": "^1.5.4",
 		"svelte": "^5.0.0",
